Optimize code formatting and readability
Implemented better code formatting for improved readability across multiple files. This includes more consistent use of spaces around operators and after commas. Also made changes to effectively organize and import only necessary libraries instead of entire packages. Utilized the toList() method during Stream operations for better efficiency in several classes.