@@ -27,7 +27,6 @@ import de.standaloendmx.standalonedmxcontrolpro.serial.network.packet.Packet;
 import java.lang.reflect.Constructor;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RegisteredPacket {
 
@@ -38,8 +37,8 @@ public class RegisteredPacket {
         this.packetClass = packetClass;
 
         List<Constructor<?>> emptyConstructorList = Arrays.stream(packetClass.getConstructors())
-                .filter(constructor -> constructor.getParameterCount() == 0).collect(Collectors.toList());
-        if (emptyConstructorList.size() == 0) {
+                .filter(constructor -> constructor.getParameterCount() == 0).toList();
+        if (emptyConstructorList.isEmpty()) {
             throw new NoSuchMethodException("Packet is missing no-args-constructor");
         }
         this.constructor = (Constructor<? extends Packet>) emptyConstructorList.get(0);
